fixed some spacing on home page and fixed heater metrics not tracking because of issue accessing dict with dot notation

--- a/backend/simulations/templates/assets/css/main.css
+++ b/backend/simulations/templates/assets/css/main.css
@@ -655,12 +655,12 @@ hr {
 
 .left-padded-25 {
     padding-left: 25%;
-    margin-right: 15px;
+
 }
 
 .right-padded-25 {
     padding-right: 25%;
-    margin-left: 15px;
+
 }
 
 @media screen and (max-width: 991px) {
